--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,23 +6,13 @@ RUN apt-get update \
   && apt-get update
 RUN apt-get -y install openfoam9
 
-FROM ubuntu:18.04 AS build
-SHELL [ "/bin/bash", "-lc" ]
-COPY --from=openfoam /opt/openfoam9 /opt/openfoam9
-RUN apt-get update && apt-get install -y apt-utils build-essential libopenmpi-dev
-WORKDIR /opt/blastfoam
-COPY . .
-RUN echo "source /opt/openfoam9/etc/bashrc" >> ~/.bashrc \
-  && echo "source /opt/blastfoam/etc/bashrc" >> ~/.bashrc \
-  && source /opt/openfoam9/etc/bashrc \
-  && source /opt/blastfoam/etc/bashrc \
-  && ./Allwmake -j \
-  && ./Allwclean
-
 FROM ubuntu:18.04 as prod
 SHELL [ "/bin/bash", "-c" ]
+COPY --from=openfoam /opt/openfoam9 /opt/openfoam9
 RUN apt-get update && apt-get install -y gnuplot libopenmpi-dev
-COPY --from=build /opt /opt
-COPY --from=build /root /root
+RUN dpkg -i blastfoam_*.deb
+RUN echo "source /opt/openfoam9/etc/bashrc" >> ~/.bashrc \
+  && echo "source /opt/blastfoam/etc/bashrc" >> ~/.bashrc \
+  && source ~/.bashrc
 WORKDIR /app/blastfoam
 ENTRYPOINT ["/bin/bash", "-ci"]
