--- a/.github/workflows/build-deb.yaml
+++ b/.github/workflows/build-deb.yaml
@@ -37,6 +37,9 @@ jobs:
           retention-days: 7
   
   build-docker:
+    name: Build Docker Image
+    needs:
+      - build
     runs-on: 'ubuntu-latest'
     steps:
       - uses: docker/login-action@v2
