--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get -y install openfoam9
 FROM ubuntu:18.04 as prod
 SHELL [ "/bin/bash", "-c" ]
 COPY --from=openfoam /opt/openfoam9 /opt/openfoam9
+COPY blastfoam_*.deb .
 RUN apt-get update && apt-get install -y gnuplot libopenmpi-dev
 RUN dpkg -i blastfoam_*.deb
 RUN echo "source /opt/openfoam9/etc/bashrc" >> ~/.bashrc \
