ci: run apt-get noninteractively

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,10 +8,10 @@ RUN apt-get -y install openfoam9
 
 FROM ubuntu:20.04 as prod
 SHELL [ "/bin/bash", "-c" ]
-ARG DEBIAN_FRONTEND=noninteractive
 COPY --from=openfoam /opt/openfoam9 /opt/openfoam9
 COPY blastfoam_*.deb .
-RUN apt-get update && apt-get install -y gnuplot libopenmpi-dev
+RUN apt-get update\
+  && DEBIAN_FRONTEND=noninteractive apt-get install -y gnuplot libopenmpi-dev
 RUN dpkg -i blastfoam_*.deb
 RUN echo "source /opt/openfoam9/etc/bashrc" >> ~/.bashrc \
   && echo "source /opt/blastfoam/etc/bashrc" >> ~/.bashrc \
