ci: go back to one validation run of rateStick

--- a/.github/workflows/build-deb.yaml
+++ b/.github/workflows/build-deb.yaml
@@ -78,6 +78,8 @@ jobs:
       matrix:
         include:
           - solver: blastFoam
+            validation: 'rateStick'
+          - solver: blastFoam
             validation: Sod_shockTube
           - solver: blastFoam
             validation: solidImpact #* uses code templates
@@ -87,16 +89,6 @@ jobs:
             validation: 'Sedov/Sedov_3D'
           - solver: blastFoam
             validation: 'KingeryBulmash/KingeryBulmash_wedge'
-          - solver: blastFoam
-            validation: 'rateStick/rateStick_1D'
-          - solver: blastFoam
-            validation: 'rateStick/rateStick_6'
-          - solver: blastFoam
-            validation: 'rateStick/rateStick_8'
-          - solver: blastFoam
-            validation: 'rateStick/rateStick_12_5'
-          - solver: blastFoam
-            validation: 'rateStick/rateStick_20'
           - solver: blastEulerFoam
             validation: shockTube_dilute
           - solver: blastEulerFoam
