--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -69,11 +69,10 @@ jobs:
         uses: docker/setup-buildx-action@v1
         with:
           install: true
-      - name: Set SSH Key
-        uses: webfactory/ssh-agent@v0.5.4
       - name: Build and Push Image
-        uses: synthetik-technologies/actions/composites/docker-build-push@v1.1.1
+        uses: synthetik-technologies/actions/composites/docker-build-push@8-add-actions-for-blastfoam
         with:
+          ssh-key-needed: false
           image: blastfoam-dev
           image-registry: ghcr.io/synthetik-technologies
           version: ${{ needs.version.outputs.version }}
