--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -74,6 +74,7 @@ jobs:
           version: ${{ needs.version.outputs.version }}
 
   install-and-validate:
+    if: ${{ false }} #* disable for now
     strategy:
       fail-fast: false
       matrix:
