--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -70,7 +70,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: blastfoam_untested.deb
-          # path: ${{ github.workspace }}
+          path: ${{ github.workspace }}
       - uses: docker/login-action@v2
         with:
           registry: ghcr.io
