ci: update semantic versioning

--- a/.releaserc
+++ b/.releaserc
@@ -9,12 +9,15 @@
     {
       "name": "staging",
       "prerelease": true
+    },
+    {
+      "name": "+([0-9])?-*",
+      "prerelease": true
     }
   ],
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
-    "@semantic-release/github",
     [
       "@semantic-release/exec",
       {
