--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Version
-        uses: synthetik-technologies/actions/composites/semantic-versioning@15-use-semantic-release-for-all-versioning
+        uses: synthetik-technologies/actions/composites/semantic-versioning@v1.2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
       # name: Short SHA Version
