ci: add github plugin

--- a/.releaserc
+++ b/.releaserc
@@ -18,6 +18,7 @@
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
+    "@semantic-release/github",
     [
       "@semantic-release/exec",
       {
