debug: reduce releaserc

--- a/.releaserc
+++ b/.releaserc
@@ -16,14 +16,6 @@
     }
   ],
   "plugins": [
-    "@semantic-release/commit-analyzer",
-    "@semantic-release/release-notes-generator",
-    "@semantic-release/github",
-    [
-      "@semantic-release/exec",
-      {
-        "publishCmd": "echo RELEASE=${nextRelease.version} >> $GITHUB_ENV"
-      }
-    ]
+    "@semantic-release/commit-analyzer"
   ]
 }
