--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -2,6 +2,10 @@ name: Build and Test
 
 on:
   push:
+    branches:
+      - "main"
+      - "master"
+      - "staging"
 
 concurrency:
   #* Only run one run at a time
