--- a/.github/workflows/pull-request-check.yaml
+++ b/.github/workflows/pull-request-check.yaml
@@ -46,3 +46,81 @@ jobs:
           name: blastfoam_untested.deb
           path: ${{ github.workspace }}/blastfoam_*.deb
           retention-days: 31
+
+  install-and-validate:
+    if: ${{ false }} #* disable for now
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - solver: blastFoam
+            validation: "rateStick"
+          - solver: blastFoam
+            validation: Sod_shockTube
+          - solver: blastFoam
+            validation: solidImpact #* uses code templates
+          - solver: blastFoam
+            validation: "Sedov/Sedov_2D"
+          - solver: blastFoam
+            validation: "Sedov/Sedov_3D"
+          - solver: blastFoam
+            validation: "KingeryBulmash/KingeryBulmash_wedge"
+          - solver: blastEulerFoam
+            validation: shockTube_dilute
+          - solver: blastEulerFoam
+            validation: shockTube_dense
+          - solver: blastEulerFoam
+            validation: shockTube_bidisperse
+          - solver: blastFoam
+            tutorial: building3DWorkshop
+          - solver: blastFoam
+            tutorial: delayedDetonation
+          - solver: blastFoam
+            tutorial: movingCrane
+          - solver: blastFoam
+            tutorial: shockTubeTabulated
+          - solver: blastReactingFoam
+            tutorial: obliqueShock
+          - solver: setRefinedFields
+            tutorial: .
+    runs-on: ["self-hosted", "deb", "openfoam"]
+    name: Validate ${{ matrix.solver }} on ${{ matrix.validation }} ${{ matrix.tutorial }}
+    needs:
+      - build
+    steps:
+      - name: Download Debian Package
+        uses: actions/download-artifact@v3
+        with:
+          name: blastfoam_untested.deb
+          path: ${{ github.workspace }}
+      - name: Install Debian Package
+        run: sudo dpkg -i blastfoam_*.deb
+      - name: Checkout blastFOAM
+        uses: actions/checkout@v3
+        with:
+          path: blastfoam-src
+      - name: Run ${{ matrix.solver }}
+        shell: bash -l {0}
+        run: |
+          source /opt/openfoam9/etc/bashrc
+          source /opt/blastfoam/etc/bashrc
+          echo "SOLVER=${{ matrix.solver }}" >> $GITHUB_ENV
+          if [ -n "${{ matrix.validation }}" ]; then
+            ./blastfoam-src/validation/${{ matrix.solver }}/${{ matrix.validation }}/Allrun
+            echo "TYPE=validation" >> $GITHUB_ENV
+            echo "SCENARIO=${{ matrix.validation }}" >> $GITHUB_ENV
+          else
+           ./blastfoam-src/tutorials/${{ matrix.solver }}/${{ matrix.tutorial }}/Allrun
+           echo "TYPE=tutorials" >> $GITHUB_ENV
+           echo "SCENARIO=${{ matrix.tutorial }}" >> $GITHUB_ENV
+          fi
+      - name: Upload Validation Plots
+        if: env.TYPE == 'validation'
+        uses: actions/upload-artifact@v3
+        with:
+          name: validation-plots
+          path: |
+            blastfoam-src/${{ env.TYPE }}/${{ env.SOLVER }}/${{ env.SCENARIO }}/validation/*.eps
+          retention-days: 30
+      - name: Uninstall Debian Package
+        run: sudo dpkg -r blastfoam
