ci: add additional commands back to releaserc

--- a/.releaserc
+++ b/.releaserc
@@ -2,6 +2,7 @@
   "branches": [
     "+([0-9])?(.{+([0-9]),x}).x",
     "main",
+    "master",
     {
       "name": "develop",
       "prerelease": true
@@ -9,13 +10,17 @@
     {
       "name": "staging",
       "prerelease": true
-    },
-    {
-      "name": "+([0-9])?-*",
-      "prerelease": "${name}"
     }
   ],
   "plugins": [
-    "@semantic-release/commit-analyzer"
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/github",
+    [
+      "@semantic-release/exec",
+      {
+        "publishCmd": "echo RELEASE=${nextRelease.version} >> $GITHUB_ENV"
+      }
+    ]
   ]
 }
