--- a/.releaserc
+++ b/.releaserc
@@ -21,7 +21,16 @@
           "debian/blastfoam/DEBIAN/control"
         ],
         "from": "Version: .*",
-        "to": "Version: ${nextRelease.version}"
+        "to": "Version: ${nextRelease.version}",
+        "results": [
+          {
+            "file": "debian/blastfoam/DEBIAN/control",
+            "hasChanged": true,
+            "numMatches": 1,
+            "numReplacements": 1
+          }
+        ],
+        "countMatches": true
       }
     ],
     "@semantic-release/release-notes-generator",
