ci: remove plugin for replacing Debian control

--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Update Debian Control
         run: sed -i "s/Version.*/Version ${{ env.RELEASE }}/" debian/blastfoam/DEBIAN/control
       - name: Commit Version Change
-        uses: EndBug/add-and-commit
+        uses: EndBug/add-and-commit@v9
         with:
           add: "debian/blastfoam/DEBIAN/control"
           author_name: Synthetik Bot
