--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -17,11 +17,15 @@ jobs:
   version:
     name: Semantic Version
     runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.version.outputs.version }}
     steps:
       - name: Version
-        uses: synthetik-technologies/actions/composites/semantic-versioning@v1.2.0
+        id: version
+        uses: synthetik-technologies/actions/composites/semantic-versioning@v15-use-semantic-release-for-all-versioning
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          dry_run: "true"
       - name: Update Debian Control
         run: sed -i "s/Version:.*/Version:\ ${{ env.RELEASE }}/" debian/blastfoam/DEBIAN/control
       - name: Commit Version Change
