--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -26,8 +26,10 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
       - name: Update Debian Control
+        if: env.RELEASE != ""
         run: sed -i "s/Version:.*/Version:\ ${{ env.RELEASE }}/" debian/blastfoam/DEBIAN/control
       - name: Commit Version Change
+        if: env.RELEASE != ""
         uses: EndBug/add-and-commit@v9
         with:
           add: "debian/blastfoam/DEBIAN/control"
