--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -25,6 +25,8 @@ jobs:
         uses: synthetik-technologies/actions/composites/semantic-versioning@10-fix-semantic-version-output
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Check
+        run: echo ${{ steps.version.outputs.version }}
 
   debian_release:
     name: Debian Release
