--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -18,7 +18,7 @@ jobs:
     name: Semantic Version
     runs-on: ubuntu-latest
     outputs:
-      version: ${{ steps.version.outputs.version }}
+      version: ${{ env.VERSION }}
     steps:
       - name: Version
         id: version
@@ -26,7 +26,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
       - name: Check
-        run: echo ${{ steps.version.outputs.version }}
+        run: echo ${{ env.VERSION }}
 
   debian_release:
     name: Debian Release
