fix: use the git plugin for commiting changes as well

--- a/.releaserc
+++ b/.releaserc
@@ -21,6 +21,7 @@
       {
         "publishCmd": "echo VERSION=${nextRelease.version} >> $GITHUB_ENV && ./.updateDeb.sh ${nextRelease.version}"
       }
-    ]
+    ],
+    "@semantic-release/git"
   ]
 }
