--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -22,7 +22,7 @@ jobs:
     steps:
       - name: Version
         id: version
-        uses: synthetik-technologies/actions/composites/semantic-versioning@10-fix-semantic-version-output
+        uses: synthetik-technologies/actions/composites/semantic-versioning@v1.2.1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
