--- a/.releaserc
+++ b/.releaserc
@@ -10,6 +10,10 @@
     {
       "name": "staging",
       "prerelease": true
+    },
+    {
+      "name": "7-upload-debian-package-with-release",
+      "prerelease": true
     }
   ],
   "plugins": [
