--- a/.releaserc
+++ b/.releaserc
@@ -42,7 +42,7 @@
       "@semantic-release/git",
       {
         "assets": [
-          "debian/blastfoam/DEBIAN/*"
+          "debian/*"
         ]
       }
     ]
